Accept hex letters with the Shift key pressed

When kcalc is switched to hexadecimal mode, the A-F characters
cannot be entered when the Shift key is pressed.

This patch enables this.

BUG: 283521
FIXED-IN: 19.08.0

Differential Revision: https://phabricator.kde.org/D18967